package edu.hitsz.props;

public class PowerProp extends BaseProp {

    public PowerProp(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

}
